# CaddyUI-MCP

./: .env.example  AGENTS.md  DECISIONS.md  Dockerfile  LICENSE  Makefile  README.md  compose.yaml  healthcheck.py  pyproject.toml
.github/: copilot-instructions.md
src/caddyui_mcp/: __main__.py  client.py  server.py
tests/: conftest.py  test_tools.py
